add reusable fragment and homepage with form tied to students page